# a2a-samples

samples/python/agents/a2a_mcp/: README.md  pyproject.toml
samples/python/agents/a2a_mcp/docs/: 1.md  orchestrator_agent.md  workflow.md
samples/python/agents/a2a_mcp/examples/: list_a2a_methods.py  run_orchestrated_demo.py  run_orchestrator_call.py  run_planner_example.py
samples/python/agents/a2a_mcp/src/a2a_mcp/agents/: __main__.py  langgraph_planner_agent.py  orchestrator_agent.py
samples/python/agents/a2a_mcp/src/a2a_mcp/common/: prompts.py  utils.py  workflow.py
samples/python/agents/a2a_mcp/src/a2a_mcp/mcp/: client.py  server.py
samples/python/agents/any_agent_adversarial_multiagent/: __main__.py  gemini.py  pyproject.toml
samples/python/agents/any_agent_adversarial_multiagent/Docs/: 1.md
samples/python/agents/dice_agent_grpc/: __main__.py  test_client.py
samples/python/agents/langgraph/: .env.prod
samples/python/agents/langgraph/app/: __main__.py  test_client.py
samples/python/agents/langgraph/docs/: 1.md  2.md
samples/python/agents/travel_planner_agent/docs/: 1.md
