[project]
name = "any_agent_adversarial_multiagent"
version = "0.1.0"
description = "Adversarial simulation between attacker and defender agents testing AI robustness and resistance to adversarial prompting using A2A protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "any_agent[all,a2a]>=0.23.1",
    "apscheduler>=3.11.0",
    "backoff>=2.2.1",
    "email-validator>=2.2.0",
    "fastapi-sso>=0.18.0",
]
